--- a/home1.css
+++ b/home1.css
@@ -292,23 +292,7 @@ h4 {
         height: 100vh;
         background-color: white;
         border-radius: 2rem 0 0 2rem;
-    }
-
-    .transaction-text {
-        display: inline;
-        color: black;
-    }
-
-    .transaction-icon {
-        width: 3.5rem;
-    }
-
-    .transaction {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        height: 4rem;
-        text-decoration: none;
+        padding: 2rem;
     }
 
     .transaction-list {
@@ -317,7 +301,35 @@ h4 {
         margin: 0;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
         height: 100%;
     }
+
+    .transaction-item {
+
+    }
+
+    .transaction {
+        display: flex;
+        align-items: center;
+        height: 4rem;
+        text-decoration: none;
+        margin-top: 2rem;
+    }
+
+    .transaction-icon {
+        max-width: 4rem;
+        margin: 1rem;
+    }
+
+    .transaction-text {
+        display: inline;
+        color: grey;
+    }
+
+    .transaction-subtext {
+        display: inline;
+        color: grey;
+    }
+
 }
