--- a/home1.css
+++ b/home1.css
@@ -185,7 +185,8 @@ h4 {
     }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px and max-width 1200px) {
+
     .graph-box {
         display: flex;
         flex-direction: column;
@@ -195,7 +196,7 @@ h4 {
         border-color: red;
         border-style: solid; */
         padding: 2rem;
-        background-color: rgb(255, 255, 255, 0.9);
+        background-color: rgb(255, 255, 255);
         border-radius: 2rem;
         margin-bottom: 2rem;
     }
@@ -221,7 +222,7 @@ h4 {
         border-color: red;
         border-style: solid; */
         padding-left: 1rem;
-        background-color: rgb(255, 255, 255, 0.9);
+        background-color: rgb(255, 255, 255);
         border-radius: 2rem;
         margin-bottom: 2rem;
     }
@@ -289,10 +290,17 @@ h4 {
         top: 0;
         right: 0;
         width: 25%;
-        height: 100vh;
+        height: 90vh;
         background-color: white;
-        border-radius: 2rem 0 0 2rem;
+        border-radius: 2rem 2rem 2rem 2rem;
         padding: 3rem 3rem 2rem 3rem;
+        margin-right: 2rem;
+    }
+
+    .transaction-scrollable {
+        margin-top: 1rem;
+        height: 83vh;
+        overflow: auto;
     }
 
     .transaction-list {
@@ -305,9 +313,23 @@ h4 {
         height: 100%;
     }
 
-    .transaction-item {
-
+    .transaction-scrollable::-webkit-scrollbar {
+        width: 0.5rem;
     }
+    
+    .transaction-scrollable::-webkit-scrollbar-track {
+        background-color: #fefefe;
+    }
+    
+    .transaction-scrollable::-webkit-scrollbar-thumb {
+        background-color: lightgrey;
+        border-radius: 5px;
+        visibility: hidden;
+    }
+
+    .transaction-scrollable:hover::-webkit-scrollbar-thumb {
+        visibility: visible;
+    }    
 
     .transaction {
         display: flex;
@@ -340,4 +362,214 @@ h4 {
         text-decoration: underline;
     }
 
+}
+
+@media only screen and (min-width: 1200px) {
+    .graph-box {
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        min-width: 100%;
+        padding: 2rem;
+        background-color: rgb(255, 255, 255);
+        border-radius: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .graph {
+        margin: auto;
+        height: 100px;
+        padding-bottom: 3rem;
+        padding-top: 2rem;
+    }
+
+    #hello {
+        margin-left: 1rem;
+    }
+
+    .planet-box {
+        display: flex;
+        flex-direction: row;
+        width: auto;
+        flex-grow: 1;
+        width: 100%;
+        padding-left: 1rem;
+        background-color: rgb(255, 255, 255);
+        border-radius: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .viz {
+        height: 180px;
+        padding-bottom: 3rem;
+        padding-top: 2rem;
+    }
+
+    .viz-box {
+        display: flex;
+        flex-direction: column;
+        min-width: 75%;
+        padding: 1rem;
+        padding: 2rem 1rem 0 1rem;
+    }
+
+    .stat-box {
+        width: 25%;
+        color: white;
+        background-color: rgb(26, 131, 163);
+        padding: 2rem;
+        border-radius: 0 2rem 2rem 2rem;
+    }
+
+    .stat {
+        font-size: 20px;
+        font-weight: bold;
+        padding: 0;
+        margin: 0.1rem;
+        font-family: Nunito, sans-serif;
+    }
+
+    .desc {
+        font-size: xx-small;
+    }
+
+    main {
+        margin-left: 4.5rem;
+        margin-top: 2rem;
+        padding-left: 3rem;
+    }
+
+    .navbar {
+        border-radius: 0 2rem 0 0;
+        top: 0;
+        width: 4rem;
+        height: 100vh;
+    }
+
+    .navbar:hover {
+        width: 14rem;
+    }
+
+    .navbar:hover .link-text {
+        display: inline;
+        color: grey;
+    }
+
+    .nav-item:last-child {
+        margin-top: auto;
+    }
+
+    .transaction-container {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 28%;
+        height: 90vh;
+        background-color: white;
+        border-radius: 2rem 2rem 2rem 2rem;
+        padding: 3rem 1rem 2rem 3rem;
+        margin-right: 2rem;
+    }
+
+    .transaction-scrollable {
+        margin-top: 1rem;
+        height: 83vh;
+        overflow: auto;
+    }
+
+    .transaction-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        height: 100%;
+    }
+
+    .transaction-scrollable::-webkit-scrollbar {
+        width: 0.5rem;
+    }
+    
+    .transaction-scrollable::-webkit-scrollbar-track {
+        background-color: #fefefe;
+    }
+    
+    .transaction-scrollable::-webkit-scrollbar-thumb {
+        background-color: lightgrey;
+        border-radius: 5px;
+        visibility: hidden;
+    }
+
+    .transaction-scrollable:hover::-webkit-scrollbar-thumb {
+        visibility: visible;
+    }    
+
+    .transaction {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 4rem;
+        text-decoration: none;
+        margin-top: 2rem;
+        width: 100%;
+    }
+    .transaction-item {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    .transaction-icon {
+        max-width: 4rem;
+        margin: 1rem 1rem 1rem 0;
+    }
+
+    .transaction-text {
+        display: inline;
+        line-height: 1.6;
+        color: #252E48;
+    }
+
+    .transaction-text-numbers {
+        color: rgb(160, 160, 160);
+    }
+
+    .transaction-divider {
+        font-size: large;
+    }
+
+    .underline {
+        text-decoration: underline;
+    }
+
+    .transaction-score-text-happy {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #70BEAA;
+        margin-left: auto;
+    }
+
+    .transaction-score-text-medium {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #EAAE78;
+        margin-left: auto;
+    }
+
+    .transaction-score-text-sad {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #FF6469;
+        margin-left: auto;
+    }
+
+    .transaction-score-icon {
+        height: 2rem;
+        margin: 1rem;
+        
+    }
 }
