--- a/home1.css
+++ b/home1.css
@@ -139,7 +139,7 @@ h4 {
 
 /* MuSt Be UsAbLe On BoTh MoBiLe AnD dEsKtOp */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 820px) {
     main {
         padding: 2rem;
     }
@@ -185,16 +185,12 @@ h4 {
     }
 }
 
-@media only screen and (min-width: 600px and max-width 1200px) {
-
+@media only screen and (min-width: 821px) and (max-width: 1200px) {
     .graph-box {
         display: flex;
         flex-direction: column;
         width: auto;
         min-width: 100%;
-        /* border-width: 1px;
-        border-color: red;
-        border-style: solid; */
         padding: 2rem;
         background-color: rgb(255, 255, 255);
         border-radius: 2rem;
@@ -218,9 +214,6 @@ h4 {
         width: auto;
         flex-grow: 1;
         width: 100%;
-        /* border-width: 1px;
-        border-color: red;
-        border-style: solid; */
         padding-left: 1rem;
         background-color: rgb(255, 255, 255);
         border-radius: 2rem;
@@ -234,6 +227,9 @@ h4 {
     }
 
     .viz-box {
+        -webkit-position: sticky;
+        position: sticky;
+        top: 0px;
         display: flex;
         flex-direction: column;
         min-width: 75%;
@@ -262,7 +258,7 @@ h4 {
     }
 
     main {
-        margin-left: 4.5rem;
+        margin-left: 6rem;
         margin-top: 2rem;
         padding-left: 3rem;
     }
@@ -283,27 +279,27 @@ h4 {
         color: grey;
     }
 
+    .nav-item:last-child {
+        margin-top: auto;
+    }
+
     .transaction-container {
         display: flex;
         flex-direction: column;
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 25%;
-        height: 90vh;
+        width: 100%;
+        height: fit-content;
         background-color: white;
         border-radius: 2rem 2rem 2rem 2rem;
-        padding: 3rem 3rem 2rem 3rem;
-        margin-right: 2rem;
+        padding: 3rem 1rem 2rem 3rem;
     }
 
     .transaction-scrollable {
         margin-top: 1rem;
-        height: 83vh;
-        overflow: auto;
+        height: fit-content;
     }
 
     .transaction-list {
+        top: 0;
         list-style: none;
         padding: 0;
         margin: 0;
@@ -333,10 +329,18 @@ h4 {
 
     .transaction {
         display: flex;
+        flex-direction: row;
         align-items: center;
         height: 4rem;
         text-decoration: none;
         margin-top: 2rem;
+        width: 100%;
+    }
+    .transaction-item {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        width: 100%;
     }
 
     .transaction-icon {
@@ -362,6 +366,32 @@ h4 {
         text-decoration: underline;
     }
 
+    .transaction-score-text-happy {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #70BEAA;
+        margin-left: auto;
+    }
+
+    .transaction-score-text-medium {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #EAAE78;
+        margin-left: auto;
+    }
+
+    .transaction-score-text-sad {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #FF6469;
+        margin-left: auto;
+    }
+
+    .transaction-score-icon {
+        height: 2rem;
+        margin: 1rem;
+        
+    }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -465,7 +495,7 @@ h4 {
         position: fixed;
         top: 0;
         right: 0;
-        width: 28%;
+        width: 26.5%;
         height: 90vh;
         background-color: white;
         border-radius: 2rem 2rem 2rem 2rem;
