--- a/home1.css
+++ b/home1.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    display: flex;
     color: #252E48;
     margin: 0;
     padding: 0;
@@ -19,9 +18,6 @@ body {
 }
 
 main {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     width: 100vh;
     margin: 0;
     padding: 0;
@@ -146,9 +142,9 @@ h4 {
 
     .planet-box {
         width: auto;
-        /* border-width: 1px;
+        border-width: 1px;
         border-color: red;
-        border-style: solid; */
+        border-style: solid; 
         padding: 2rem;
         border-radius: 2rem;
     }
@@ -227,8 +223,6 @@ h4 {
     }
 
     .viz-box {
-        -webkit-position: sticky;
-        position: sticky;
         top: 0px;
         display: flex;
         flex-direction: column;
@@ -284,18 +278,23 @@ h4 {
     }
 
     .transaction-container {
+        -webkit-position: sticky;
+        position: sticky;
+        top: 0;
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: fit-content;
+        height: auto;
         background-color: white;
         border-radius: 2rem 2rem 2rem 2rem;
         padding: 3rem 1rem 2rem 3rem;
+        margin-bottom: 1rem;
     }
 
     .transaction-scrollable {
         margin-top: 1rem;
-        height: fit-content;
+        height: 75vh;
+        overflow: scroll;
     }
 
     .transaction-list {
