--- a/home1.css
+++ b/home1.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 /*@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');*/
 
 :root {
@@ -136,16 +136,24 @@ h4 {
 /* MuSt Be UsAbLe On BoTh MoBiLe AnD dEsKtOp */
 
 @media only screen and (max-width: 820px) {
+
+    body {
+        display: block;
+    }
+
+    
     main {
-        padding: 2rem;
+        padding: 1rem;
+        display: flex;
+        min-width: max-content;
     }
 
     .planet-box {
-        width: auto;
+        width: 80vh;
+        background-color: white;
         border-width: 1px;
         border-color: red;
         border-style: solid; 
-        padding: 2rem;
         border-radius: 2rem;
     }
 
@@ -174,10 +182,29 @@ h4 {
 
     .navbar-nav {
         flex-direction: row;
+        align-items: flex-end;
     }
 
     .logo {
         display: none;
+    }
+
+    .graph-box {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        width: 80vh;
+        padding: 2rem;
+        background-color: rgb(255, 255, 255);
+        border-radius: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .graph {
+        margin: auto;
+        height: 100px;
+        padding-bottom: 3rem;
+        padding-top: 2rem;
     }
 }
 
