--- a/home1.css
+++ b/home1.css
@@ -12,7 +12,7 @@ body {
     padding: 0;
     height: auto;
     min-height: fit-content;
-    width: 100vh;
+    width: 100%;
     background-image: linear-gradient(#b6eedc, #9bddce);
     background-repeat: no-repeat;
 }
@@ -183,6 +183,11 @@ h4 {
     .navbar-nav {
         flex-direction: row;
         align-items: flex-end;
+    }
+
+    .link-text {
+        display: none;
+        margin-left: 1rem;
     }
 
     .logo {
