--- a/home1.css
+++ b/home1.css
@@ -14,7 +14,6 @@ body {
     min-height: fit-content;
     width: 100%;
     background-image: linear-gradient(#b6eedc, #9bddce);
-    background-repeat: no-repeat;
 }
 
 main {
@@ -139,17 +138,20 @@ h4 {
 
     body {
         display: block;
+        width: 100vw;
     }
-
     
     main {
         padding: 1rem;
-        display: flex;
-        min-width: max-content;
+        width: 100vw;
+    }
+
+    body::-webkit-scrollbar {
+        display: none;
     }
 
     .planet-box {
-        width: 80vh;
+        width: 90vw;
         background-color: white;
         border-width: 1px;
         border-color: red;
@@ -176,18 +178,18 @@ h4 {
 
     .navbar {
         bottom: 0;
-        width: 100vh;
+        width: 100vw;
         height: 4rem;
+        overflow-x: hidden; 
     }
 
     .navbar-nav {
         flex-direction: row;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .link-text {
         display: none;
-        margin-left: 1rem;
     }
 
     .logo {
@@ -198,7 +200,7 @@ h4 {
         display: flex;
         flex-direction: column;
         align-items: baseline;
-        width: 80vh;
+        width: 70vw;
         padding: 2rem;
         background-color: rgb(255, 255, 255);
         border-radius: 2rem;
@@ -207,13 +209,19 @@ h4 {
 
     .graph {
         margin: auto;
-        height: 100px;
+        width: 70vw;
         padding-bottom: 3rem;
         padding-top: 2rem;
+    }
+
+    .transaction-container {
+        max-width: 100vw;
+        overflow-x: hidden;
     }
 }
 
 @media only screen and (min-width: 821px) and (max-width: 1200px) {
+
     .graph-box {
         display: flex;
         flex-direction: column;
