--- a/home1.css
+++ b/home1.css
@@ -70,9 +70,17 @@ h4 {
 
 /* NAVBAR MESS INCOMING TODO: FIX THIS MESSY MESS */
 
+html {
+    max-width: 100vw;
+}
+
 .logo {
     margin-top: 0;
     width: 4rem;
+}
+
+main {
+    margin-right: 0;
 }
 
 .navbar {
@@ -142,7 +150,6 @@ h4 {
     }
     
     main {
-        padding: 1rem;
         width: 100vw;
     }
 
