--- a/home1.css
+++ b/home1.css
@@ -146,7 +146,6 @@ main {
 
     body {
         display: block;
-        width: 100vw;
     }
     
     main {
@@ -155,6 +154,10 @@ main {
 
     body::-webkit-scrollbar {
         display: none;
+    }
+
+    #hello {
+        padding-left: 1rem;
     }
 
     .planet-box {
@@ -222,8 +225,115 @@ main {
     }
 
     .transaction-container {
-        max-width: 100vw;
-        overflow-x: hidden;
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+        height: auto;
+        background-color: white;
+        border-radius: 2rem 2rem 2rem 2rem;
+        padding: 3rem 1rem 2rem 3rem;
+        margin-bottom: 1rem;
+    }
+
+    .transaction-scrollable {
+        margin-top: 1rem;
+        height: 75vh;
+        overflow: scroll;
+    }
+
+    .transaction-list {
+        top: 0;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        height: 100%;
+    }
+
+    .transaction-scrollable::-webkit-scrollbar {
+        width: 0.5rem;
+    }
+    
+    .transaction-scrollable::-webkit-scrollbar-track {
+        background-color: #fefefe;
+    }
+    
+    .transaction-scrollable::-webkit-scrollbar-thumb {
+        background-color: lightgrey;
+        border-radius: 5px;
+        visibility: hidden;
+    }
+
+    .transaction-scrollable:hover::-webkit-scrollbar-thumb {
+        visibility: visible;
+    }    
+
+    .transaction {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 4rem;
+        text-decoration: none;
+        margin-top: 2rem;
+        width: 100%;
+    }
+    .transaction-item {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    .transaction-icon {
+        max-width: 4rem;
+        margin: 1rem 1rem 1rem 0;
+    }
+
+    .transaction-text {
+        display: inline;
+        line-height: 1.6;
+        color: #252E48;
+    }
+
+    .transaction-text-numbers {
+        color: rgb(160, 160, 160);
+    }
+
+    .transaction-divider {
+        font-size: large;
+    }
+
+    .underline {
+        text-decoration: underline;
+    }
+
+    .transaction-score-text-happy {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #70BEAA;
+        margin-left: auto;
+    }
+
+    .transaction-score-text-medium {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #EAAE78;
+        margin-left: auto;
+    }
+
+    .transaction-score-text-sad {
+        font-family: "Nunito", sans-serif;
+        font-weight: bold;
+        color: #FF6469;
+        margin-left: auto;
+    }
+
+    .transaction-score-icon {
+        height: 2rem;
+        margin: 1rem;
+        
     }
 }
 
