--- a/home1.css
+++ b/home1.css
@@ -228,7 +228,7 @@ main {
         display: flex;
         flex-direction: column;
         width: 80vw;
-        height: auto;
+        height: 80vh;
         background-color: white;
         border-radius: 2rem 2rem 2rem 2rem;
         padding: 3rem 1rem 2rem 3rem;
