--- a/home1.css
+++ b/home1.css
@@ -150,6 +150,7 @@ main {
     
     main {
         width: 100vw;
+        padding-top: 2rem;
     }
 
     body::-webkit-scrollbar {
@@ -161,15 +162,18 @@ main {
     }
 
     .planet-box {
-        width: 90vw;
+        padding: 7vw 7vw 7vw 7vw;
+        margin-right: 3vw;
+        margin-left: 3vw;
         background-color: white;
-        border-width: 1px;
+        /*border-width: 1px;
         border-color: red;
-        border-style: solid; 
-        border-radius: 2rem;
+        border-style: solid; */
+        border-radius: 2rem 2rem 0 0;
     }
 
     .stat-box {
+        display: none;
         width: auto;
         color: white;
         max-width: 100%;
@@ -210,16 +214,18 @@ main {
         display: flex;
         flex-direction: column;
         align-items: baseline;
-        width: 70vw;
-        padding: 2rem;
+        padding: 7vw 7vw 7vw 7vw;
+        margin-bottom: 5rem;
+        margin-right: 3vw;
+        margin-left: 3vw;
         background-color: rgb(255, 255, 255);
-        border-radius: 2rem;
+        border-radius: 0 0 2rem 2rem;
         margin-bottom: 2rem;
     }
 
     .graph {
         margin: auto;
-        width: 70vw;
+        width: 68vw;
         padding-bottom: 3rem;
         padding-top: 2rem;
     }
@@ -231,13 +237,15 @@ main {
         height: 70vh;
         background-color: white;
         border-radius: 2rem 2rem 2rem 2rem;
-        padding: 3rem 1rem 2rem 3rem;
+        padding: 7vw 7vw 7vw 7vw;
         margin-bottom: 5rem;
+        margin-right: 3vw;
+        margin-left: 3vw;
     }
 
     .transaction-scrollable {
         margin-top: 1rem;
-        height: 60vh;
+        height: 65vh;
         overflow: scroll;
     }
 
