--- a/home1.css
+++ b/home1.css
@@ -44,14 +44,14 @@ h1 {
 }
 
 h2 {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     margin: 0;
     font-weight: 600;
     padding: 0rem;
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin: 0;
     padding: 0;
 }
@@ -141,7 +141,7 @@ main {
 
 /* MuSt Be UsAbLe On BoTh MoBiLe AnD dEsKtOp */
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 900px) {
 
     body {
         display: block;
@@ -347,7 +347,7 @@ main {
     }
 }
 
-@media only screen and (min-width: 850px) {
+@media only screen and (min-width: 901px) {
 
     h3 {
         padding-top: 3vw;
@@ -398,6 +398,9 @@ main {
     }
 
     .stat-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         width: 10vw;
         color: white;
         background-color: rgb(26, 131, 163);
@@ -555,329 +558,5 @@ main {
         
     }
 
-/*
-    .transaction-container {
-        top: 0;
-        display: flex;
-        flex-direction: column;
-        background-color: white;
-        border-radius: 2rem;
-        padding-left: 5vw;
-        padding-right: 5vw;
-        padding-top: 5vw;
-        margin-bottom: 1rem;
-    }
 
-    .transaction-scrollable {
-        margin-top: 1rem;
-        height: 75vh;
-        overflow: scroll;
-    }
-
-    .transaction-list {
-        top: 0;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: left;
-        height: 100%;
-    }
-
-    .transaction-scrollable::-webkit-scrollbar {
-        width: 0.5rem;
-    }
-    
-    .transaction-scrollable::-webkit-scrollbar-track {
-        background-color: #fefefe;
-    }
-    
-    .transaction-scrollable::-webkit-scrollbar-thumb {
-        background-color: lightgrey;
-        border-radius: 5px;
-        visibility: hidden;
-    }
-
-    .transaction-scrollable:hover::-webkit-scrollbar-thumb {
-        visibility: visible;
-    }    
-
-    .transaction {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        height: 4rem;
-        text-decoration: none;
-        margin-top: 2rem;
-        width: 100%;
-    }
-    .transaction-item {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        width: 100%;
-    }
-
-    .transaction-icon {
-        max-width: 4rem;
-        margin: 1rem 1rem 1rem 0;
-    }
-
-    .transaction-text {
-        display: inline;
-        line-height: 1.6;
-        color: #252E48;
-    }
-
-    .transaction-text-numbers {
-        color: rgb(160, 160, 160);
-    }
-
-    .transaction-divider {
-        font-size: large;
-    }
-
-    .underline {
-        text-decoration: underline;
-    }
-
-    .transaction-score-text-happy {
-        font-family: "Nunito", sans-serif;
-        font-weight: bold;
-        color: #70BEAA;
-        margin-left: auto;
-    }
-
-    .transaction-score-text-medium {
-        font-family: "Nunito", sans-serif;
-        font-weight: bold;
-        color: #EAAE78;
-        margin-left: auto;
-    }
-
-    .transaction-score-text-sad {
-        font-family: "Nunito", sans-serif;
-        font-weight: bold;
-        color: #FF6469;
-        margin-left: auto;
-    }
-
-    .transaction-score-icon {
-        height: 2rem;
-        margin: 1rem;
-        
-    } */
 }
- 
-
-/*
-@media only screen and (min-width: 1200px) {
-    .graph-box {
-        display: flex;
-        flex-direction: column;
-        width: auto;
-        width: 60vh;
-        padding: 2rem;
-        background-color: rgb(255, 255, 255);
-        border-radius: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    .graph {
-        margin: auto;
-        height: 100px;
-        padding-bottom: 3rem;
-        padding-top: 2rem;
-    }
-
-    #hello {
-        margin-left: 1rem;
-    }
-
-    .planet-box {
-        display: flex;
-        flex-direction: row;
-        width: auto;
-        flex-grow: 1;
-        width: 100%;
-        padding-left: 1rem;
-        background-color: rgb(255, 255, 255);
-        border-radius: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    .viz {
-        height: 180px;
-        padding-bottom: 3rem;
-        padding-top: 2rem;
-    }
-
-    .viz-box {
-        display: flex;
-        flex-direction: column;
-        min-width: 75%;
-        padding: 1rem;
-        padding: 2rem 1rem 0 1rem;
-    }
-
-    .stat-box {
-        width: 20%;
-        color: white;
-        background-color: rgb(26, 131, 163);
-        padding: 2rem;
-        border-radius: 0 2rem 2rem 2rem;
-    }
-
-    .stat {
-        font-size: 20px;
-        font-weight: bold;
-        padding: 0;
-        margin: 0.1rem;
-        font-family: Nunito, sans-serif;
-    }
-
-    .desc {
-        font-size: xx-small;
-    }
-
-    main {
-        margin-left: 4.5rem;
-        margin-top: 2rem;
-        padding-left: 3rem;
-    }
-
-    .navbar {
-        border-radius: 0 2rem 0 0;
-        top: 0;
-        width: 4rem;
-        height: 100vh;
-    }
-
-    .navbar:hover {
-        width: 14rem;
-    }
-
-    .navbar:hover .link-text {
-        display: inline;
-        color: grey;
-    }
-
-    .nav-item:last-child {
-        margin-top: auto;
-    }
-
-    .transaction-container {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 26.5%;
-        height: 90vh;
-        background-color: white;
-        border-radius: 2rem 2rem 2rem 2rem;
-        padding: 3rem 1rem 2rem 3rem;
-        margin-right: 2rem;
-    }
-
-    .transaction-scrollable {
-        margin-top: 1rem;
-        height: 83vh;
-        overflow: auto;
-    }
-
-    .transaction-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: left;
-        height: 100%;
-    }
-
-    .transaction-scrollable::-webkit-scrollbar {
-        width: 0.5rem;
-    }
-    
-    .transaction-scrollable::-webkit-scrollbar-track {
-        background-color: #fefefe;
-    }
-    
-    .transaction-scrollable::-webkit-scrollbar-thumb {
-        background-color: lightgrey;
-        border-radius: 5px;
-        visibility: hidden;
-    }
-
-    .transaction-scrollable:hover::-webkit-scrollbar-thumb {
-        visibility: visible;
-    }    
-
-    .transaction {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        height: 4rem;
-        text-decoration: none;
-        margin-top: 2rem;
-        width: 100%;
-    }
-    .transaction-item {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        width: 100%;
-    }
-
-    .transaction-icon {
-        max-width: 4rem;
-        margin: 1rem 1rem 1rem 0;
-    }
-
-    .transaction-text {
-        display: inline;
-        line-height: 1.6;
-        color: #252E48;
-    }
-
-    .transaction-text-numbers {
-        color: rgb(160, 160, 160);
-    }
-
-    .transaction-divider {
-        font-size: large;
-    }
-
-    .underline {
-        text-decoration: underline;
-    }
-
-    .transaction-score-text-happy {
-        font-family: "Nunito", sans-serif;
-        font-weight: bold;
-        color: #70BEAA;
-        margin-left: auto;
-    }
-
-    .transaction-score-text-medium {
-        font-family: "Nunito", sans-serif;
-        font-weight: bold;
-        color: #EAAE78;
-        margin-left: auto;
-    }
-
-    .transaction-score-text-sad {
-        font-family: "Nunito", sans-serif;
-        font-weight: bold;
-        color: #FF6469;
-        margin-left: auto;
-    }
-
-    .transaction-score-icon {
-        height: 2rem;
-        margin: 1rem;
-        
-    }
-} */
