--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,12 @@ body {
     font-family: "Nunito";
     background-image: linear-gradient(#79cdba, #9ce8d1);
     background-repeat: no-repeat;
-    padding: 50px;
-    overflow: hidden
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    margin-top: 15vh;
 }
 
 body::-webkit-scrollbar {
@@ -29,18 +33,13 @@ h1 {
     margin-bottom: 30px;
 }
 
-.login {
-    margin: auto;
-    width: 350px;
-    height: 450px;
-    margin-bottom: 30vh;
-}
 
 .login-screen {
     background-color: #FFF;
     padding: 20px;
-    margin-top: 20vh;
-    border-radius: 5px 40px 5px;
+    border-radius: 5px 30px 5px;
+    width: 350px;
+    height: 350px;
 }
 
 .app-title {
