--- a/master_styles.css
+++ b/master_styles.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 /*@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');*/
 
 :root {
     font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 body {
-    color: #252E48;
+    color: #252e48;
     margin: 0;
     padding: 0;
     height: auto;
@@ -135,7 +135,9 @@ html {
     margin-left: 1rem;
 }
 
-.svg-icon path, .svg-icon polygon, .svg-icon rect {
+.svg-icon path,
+.svg-icon polygon,
+.svg-icon rect {
     fill: gray;
 }
 
@@ -147,11 +149,10 @@ html {
 /* MuSt Be UsAbLe On BoTh MoBiLe AnD dEsKtOp */
 
 @media only screen and (max-width: 900px) {
-
     body {
         display: block;
     }
-    
+
     main {
         width: 100vw;
         padding-top: 5vh;
@@ -187,15 +188,16 @@ html {
         margin-top: 10vh;
         animation: MoveUpDown 1.5s linear infinite;
     }
-      
-      @keyframes MoveUpDown {
-        0%, 100% {
-          transform: translateY(0);
+
+    @keyframes MoveUpDown {
+        0%,
+        100% {
+            transform: translateY(0);
         }
         50% {
-          transform: translateY(-10px);
+            transform: translateY(-10px);
         }
-      }
+    }
 
     .stat-box {
         display: none;
@@ -291,11 +293,11 @@ html {
     .transaction-scrollable::-webkit-scrollbar {
         width: 0.5rem;
     }
-    
+
     .transaction-scrollable::-webkit-scrollbar-track {
         background-color: #fefefe;
     }
-    
+
     .transaction-scrollable::-webkit-scrollbar-thumb {
         background-color: lightgrey;
         border-radius: 5px;
@@ -304,7 +306,7 @@ html {
 
     .transaction-scrollable:hover::-webkit-scrollbar-thumb {
         visibility: visible;
-    }    
+    }
 
     .transaction {
         display: flex;
@@ -330,7 +332,7 @@ html {
     .transaction-text {
         display: inline;
         line-height: 1.6;
-        color: #252E48;
+        color: #252e48;
     }
 
     .transaction-text-numbers {
@@ -348,7 +350,7 @@ html {
     .transaction-score-text-happy {
         font-family: "Nunito", sans-serif;
         font-weight: bold;
-        color: #70BEAA;
+        color: #70beaa;
         margin-left: auto;
     }
 
@@ -362,19 +364,17 @@ html {
     .transaction-score-text-sad {
         font-family: "Nunito", sans-serif;
         font-weight: bold;
-        color: #FF6469;
+        color: #ff6469;
         margin-left: auto;
     }
 
     .transaction-score-icon {
         height: 2rem;
         margin: 1rem;
-        
     }
 }
 
 @media only screen and (min-width: 901px) {
-
     .page-heading {
         padding-top: 1vw;
     }
@@ -414,6 +414,11 @@ html {
         margin-bottom: 2rem;
     }
 
+    .checker {
+        display: flex;
+        flex-direction: 30vw;
+    }
+
     .checker-box {
         display: flex;
         flex-direction: row;
@@ -431,15 +436,16 @@ html {
         align-self: center;
         animation: MoveUpDown 1.5s linear infinite;
     }
-      
-      @keyframes MoveUpDown {
-        0%, 100% {
-          transform: translateY(0);
+
+    @keyframes MoveUpDown {
+        0%,
+        100% {
+            transform: translateY(0);
         }
         50% {
-          transform: translateY(-10px);
+            transform: translateY(-10px);
         }
-      }
+    }
 
     .viz-box {
         display: flex;
@@ -475,7 +481,8 @@ html {
         margin-bottom: 1rem;
     }
 
-    .metric-box-header-titleblock h3, .metric-box-header-titleblock p {
+    .metric-box-header-titleblock h3,
+    .metric-box-header-titleblock p {
         padding: 0 0 0 2vw;
     }
 
@@ -501,7 +508,7 @@ html {
 
     .metric-bar-inside-bad {
         height: 2vh;
-        background-color: #FF6469;
+        background-color: #ff6469;
         border-radius: 0.4rem 0 0 0.4rem;
     }
 
@@ -513,7 +520,7 @@ html {
 
     .metric-bar-inside-good {
         height: 2vh;
-        background-color: #70BEAA;
+        background-color: #70beaa;
         border-radius: 0.4rem 0 0 0.4rem;
     }
 
@@ -528,6 +535,11 @@ html {
         border-radius: 1.5rem;
     }
 
+    .product-img-small {
+        width: 8vw;
+        border-radius: 0.7rem;
+    }
+
     .product-description {
         font-family: Nunito;
         width: 15vw;
@@ -537,7 +549,13 @@ html {
 
     .product-price-large {
         color: rgb(160, 160, 160);
-        padding: 0.5rem 0 2rem 0;
+        padding: 0.5rem 0 1.5rem 0;
+    }
+
+    .product-price-small {
+        color: rgb(160, 160, 160);
+        padding: 0.1rem 0 0.7rem 0;
+        font-size: x-small;
     }
 
     .stat {
@@ -546,6 +564,55 @@ html {
         padding: 0;
         margin: 0.1rem;
         font-family: Nunito, sans-serif;
+    }
+
+    .alternatives-box {
+        display: flex;
+        flex-direction: column;
+        margin-left: 3vw;
+        padding: 0 1vw 1vw 3vw;
+        background-color: white;
+        border-radius: 2rem;
+        width: 32vw;
+        height: 77.5vh;
+    }
+
+    .alternatives-gallery {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 27vw;
+        overflow: scroll;
+        padding: 0;
+    }
+
+    .alternatives-gallery::-webkit-scrollbar {
+        width: 0.5rem;
+    }
+
+    .alternatives-gallery::-webkit-scrollbar-track {
+        background-color: #fefefe;
+    }
+
+    .alternatives-gallery::-webkit-scrollbar-thumb {
+        background-color: lightgrey;
+        border-radius: 5px;
+        visibility: hidden;
+    }
+
+    .alternatives-gallery:hover::-webkit-scrollbar-thumb {
+        visibility: visible;
+    }
+
+    .alternatives-card {
+        margin-top: 2rem;
+        margin-right: 3vw;
+        width: 8vw;
+        height: fit-content;
+        padding: 2vh;
+        background-color: white;
+        border-radius: 0.7rem;
+        box-shadow: 2px 1px 5px rgb(233, 233, 233);
     }
 
     .desc {
@@ -609,11 +676,11 @@ html {
     .transaction-scrollable::-webkit-scrollbar {
         width: 0.5rem;
     }
-    
+
     .transaction-scrollable::-webkit-scrollbar-track {
         background-color: #fefefe;
     }
-    
+
     .transaction-scrollable::-webkit-scrollbar-thumb {
         background-color: lightgrey;
         border-radius: 5px;
@@ -622,7 +689,7 @@ html {
 
     .transaction-scrollable:hover::-webkit-scrollbar-thumb {
         visibility: visible;
-    }    
+    }
 
     .transaction {
         display: flex;
@@ -648,7 +715,7 @@ html {
     .transaction-text {
         display: inline;
         line-height: 1.6;
-        color: #252E48;
+        color: #252e48;
     }
 
     .transaction-text-numbers {
@@ -667,21 +734,21 @@ html {
     .transaction-score-text-happy {
         font-family: "Nunito", sans-serif;
         font-weight: bold;
-        color: #70BEAA;
+        color: #70beaa;
         margin-left: auto;
     }
 
     .transaction-score-text-medium {
         font-family: "Nunito", sans-serif;
         font-weight: bold;
-        color: #EAAE78;
+        color: #eaae78;
         margin-left: auto;
     }
 
     .transaction-score-text-sad {
         font-family: "Nunito", sans-serif;
         font-weight: bold;
-        color: #FF6469;
+        color: #ff6469;
         margin-left: auto;
     }
 
@@ -702,5 +769,4 @@ html {
     .back-button:hover .svg-icon path {
         fill: black;
     }
-
 }
