--- a/master_styles.css
+++ b/master_styles.css
@@ -174,7 +174,7 @@ html {
         padding: 7vw 7vw 7vw 7vw;
         margin-right: 3vw;
         margin-left: 3vw;
-        background-color: none;
+        background-color: white;
         border-radius: 2rem 2rem 0 0;
     }
 
