--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,13 @@ input:focus {
     display: block;
     margin-top: 12px;
 }
+
+@media only screen and (max-width: 900px) {
+    .login-screen {
+        width: 90vw;
+    }
+
+    .btn {
+        width: 70vw;
+    }
+}
